syntax = "proto3";

package io.harness.perpetualtask;

option java_multiple_files = true;

import "google/protobuf/duration.proto";

message PerpetualTaskId {
  string id = 1;
}

// schedule persists in mongodb
message PerpetualTaskSchedule {
  // Interval between successive iterations
  google.protobuf.Duration interval = 1;
  // Timeout for one iteration of the task
  google.protobuf.Duration timeout = 2;
}